. [NEW] Sprite: spriteWithBatchNode / initWithBatchNode were removed. Use initWithTexture:batch.texture / spriteWithTexture:batch.texture instead
. [NEW] TextureAtlas: Added option to not use VAO (might be a bit slower, but it consumes less memory)
. [NEW] TileMap: polygon, polilines and gid are parsed from the objects (issue #1311)
. [FIX] Actions: Instant actions are trigged on stop and not start (issue #1305)
. [FIX] CocosDenshion: fixed memory leak on CDBufferLoadRequest (issue #1286)
. [FIX] Director: It is possible to re-init a director after it has been quit (issue #1313)
. [FIX] DrawingPrimitives: drawColor4f() uses GLFloat instead of GLbyte (issue #1307)
. [FIX] GLProgram: report error correctly if vertex shader has compile issues
. [FIX] GLView: Fixed memory leak while dispatching events (Mac only)
. [FIX] GLView: MSAA support is working (issue #1315)
. [FIX] Node: flip, visible are bool (and not BOOL) to prevent signed issues (issue #1314, issue #1287)
. [FIX] Particles: Fixed memory leak in fillWithEmptyQuadsFromIndex
. [FIX] Progress: works with rotated sprite frames (issue #1303)
. [FIX] Sprite: adding family of sprites to a batchnode works as expected (issue #1217)
. [FIX] SpriteBatch: Quad extensions are public
. [FIX] Tests: LabelTest with custom TTF font works on Mac too
. [FIX] Texture2D: initWithImage renamed with initWithCGImage
. [FIX] Types: kCCResolutionStandard renamed to kCCResolutioniPhone

version 2.0-beta2 17-Jan-2012
. [NEW] v1.1 Forward-ported changes:
		LabelTTF: word wrap works on Mac (issue #1074)
		Node: Added onExitTransitionDidStart (issue #792)
. [NEW] ActionManager: It is no longer a singleton. It is an ivar of director
. [NEW] Director: it is a subclass of UIViewController (iOS only)
. [NEW] Director: pushScene is the new recommended way to start the scene. Director will start the animation
		automatically once the view is displayed (iOS only)
. [NEW] Director: FPS & seconds per frame are displayed at the same time